/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package bancorrw.cliente;

import java.time.LocalDate;

/**
 *
 * @author rafae
 */
public abstract class Pessoa {

    
    
}
